--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							</li>
 							<li><a href="index.html">Research</a></li>
 							<li><a href="index.html">Research</a></li>
-							<li><a href="index.html">Research</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li><a href="index.html">Research</a></li>
 							<li><a href="#" class="button primary">Contact</a></li>
 						</ul>
@@ -120,6 +120,22 @@
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
+				</section>
+            
+            <!-- Four -->
+				<section id="four" class="spotlight style4 right">
+					<span class="image fit main bottom"><img src="images/pic7.jpg" alt="" /></span>
+					<div class="content">
+						<header>
+							<h2>Interdum felis blandit praesent sed augue</h2>
+							<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
+						</header>
+						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<ul class="actions">
+							<li><a href="#" class="button">Learn More</a></li>
+						</ul>
+					</div>
+					<a href="#five" class="goto-next scrolly">Next</a>
 				</section>
 
 			<!-- Four -->
