--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Cognitive Neuromodulation Lab</title>
+		<title>Home - Cognitive Neuromodulation Lab</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,9 +17,10 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">LOGO?</a></h1>
+					<h1 id="logo"><a href="index.html">Cognitive Neuromodulation Lab</a></h1>
 					<nav id="nav">
 						<ul>
+<!--
 							<li>
 								<a href="#">People</a>
 								<ul>
@@ -37,11 +38,11 @@
 									</li>
 								</ul>
 							</li>
-							<li><a href="index.html">Research</a></li>
-							<li><a href="index.html">Research</a></li>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="index.html">Research</a></li>
-							<li><a href="#" class="button primary">Contact</a></li>
+-->
+							<li><a href="research.html">Research</a></li>
+							<li><a href="publications.html">Publications</a></li>
+							<li><a href="people.html">People</a></li>
+							<li><a href="contact.html" class="button primary">Contact</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -91,7 +92,7 @@
 				</section>
 
 			<!-- Two -->
-				<section id="two" class="spotlight style2 right">
+				<section id="two" class="spotlight style1 right">
 					<span class="image fit main"><img src="images/pic3.jpg" alt="" /></span>
 					<div class="content">
 						<header>
@@ -107,7 +108,7 @@
 				</section>
 
 			<!-- Three -->
-				<section id="three" class="spotlight style3 left">
+				<section id="three" class="spotlight style1 left">
 					<span class="image fit main bottom"><img src="images/pic4.jpg" alt="" /></span>
 					<div class="content">
 						<header>
@@ -123,7 +124,7 @@
 				</section>
             
             <!-- Four -->
-				<section id="four" class="spotlight style4 right">
+				<section id="four" class="spotlight style1 right">
 					<span class="image fit main bottom"><img src="images/pic7.jpg" alt="" /></span>
 					<div class="content">
 						<header>
@@ -135,7 +136,6 @@
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
 					</div>
-					<a href="#five" class="goto-next scrolly">Next</a>
 				</section>
 
 			<!-- Four -->
