--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 								</ul>
 							</li>
 -->
-							<li><a href="research.html">Research</a></li>
+							<li><a href="index.html">Home</a></li>
+                            <li><a href="research.html">Research</a></li>
 							<li><a href="publications.html">Publications</a></li>
 							<li><a href="people.html">People</a></li>
 							<li><a href="contact.html" class="button primary">Contact</a></li>
@@ -101,7 +102,7 @@
 						</header>
 						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="currentprojects.html" class="button">Learn More</a></li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
@@ -117,7 +118,7 @@
 						</header>
 						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="currentprojects.html" class="button">Learn More</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
@@ -133,7 +134,7 @@
 						</header>
 						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="currentprojects.html" class="button">Learn More</a></li>
 						</ul>
 					</div>
 				</section>
