--- a/publications.html
+++ b/publications.html
@@ -39,7 +39,15 @@
 								</ul>
 							</li>
 -->
-							<li><a href="research.html">Research</a></li>
+							<li><a href="index.html">Home</a></li>
+                            <li>
+                                <a href="research.html">Research</a>
+                            <ul>
+									<li><a href="aboutus.html">About us</a></li>
+									<li><a href="currentprojects.html">Current projects</a></li>
+								</ul>
+                            </li>
+							
 							<li><a href="publications.html">Publications</a></li>
 							<li><a href="people.html">People</a></li>
 							<li><a href="contact.html" class="button primary">Contact</a></li>
