--- a/aboutus.html
+++ b/aboutus.html
@@ -60,7 +60,7 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Research</h2>
+							<h2>About us</h2>
 						</header>
                         
                         <!-- Content -->
