--- a/people.html
+++ b/people.html
@@ -85,7 +85,7 @@
                                         <div class="modal-content">
                                                 <span class="close">&times;</span>
                                                 <h2>Brittany van Beek</h2>
-                                                <img src="people/imgs/ayo.jpg" class="portrait">
+                                                <img src="people/imgs/Ayo.jpg" class="portrait">
                                                 My name is Benjamin Kop and I am a PhD student here in the Neuromodulation lab. While I enjoy stimulating my brain with books, music, films, and the like, I am always looking to stimulate other people’s brain in a more literal sense. During my PhD, I get to put this passion into practice in my research applying transcranial ultrasonic stimulation to the motor system. <br><br>
 
                                                 My interest in the brain, neuromodulation, and the motor system was sparked during my bachelor’s degree in Psychology, specialized in Brain and Cognition. I further pursued these interests in a research master’s of Cognitive Neuroscience at University College London, where my work focused on functional motor cortical remapping in unilateral arm amputees using transcranial magnetic stimulation. Now, I am excited to be working with ultrasound and TMS to help establish the foundation of ultrasonic neuromodulation in humans, starting with its impact on motor cortical excitability.
@@ -118,7 +118,7 @@
                                       <h2 class="profile__name">Ben Bramson</h2>
                                       <p class = "titleorange">PhD student</p>
                                         <button class="openmodal myBtn button">Read more</button>
-                                      <img alt="Profile shot" src="people/imgs/aiony.jpg" />
+                                      <img alt="Profile shot" src="people/imgs/Aiony.jpg" />
                                     </div>
                                   </li>    
                                     
