--- a/publications.html
+++ b/publications.html
@@ -6,10 +6,12 @@
 -->
 <html>
 	<head>
-		<title>Research - Cognitive Neuromodulation Lab</title>
+		<title>Publications - Verhagen Lab</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/people.css" />
+		<link rel="stylesheet" href="assets/css/gallery.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -17,40 +19,15 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Cognitive Neuromodulation Lab</a></h1>
+					<h1 id="logo"><a href="index.html">Verhagen Lab</a></h1>
 					<nav id="nav">
 						<ul>
-<!--
-							<li>
-								<a href="#">People</a>
-								<ul>
-									<li><a href="index.html">People</a></li>
-									<li><a href="index.html">Research</a></li>
-									<li><a href="index.html">Contact</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
--->
-							<li><a href="index.html">Home</a></li>
-                            <li>
-                                <a href="research.html">Research</a>
-                            <ul>
-									<li><a href="aboutus.html">About us</a></li>
-									<li><a href="currentprojects.html">Current projects</a></li>
-								</ul>
-                            </li>
-							
-							<li><a href="publications.html">Publications</a></li>
-							<li><a href="people.html">People</a></li>
-							<li><a href="contact.html" class="button primary">Contact</a></li>
+                            <li><a href="index.html">Home</a></li>
+							<li><a href="aboutus.html">About us</a></li>
+                            <li><a href="currentprojects.html">Current research projects</a></li>
+                            <li><a href="publications.html">Publications</a></li>
+							<li><a href="people.html">The team</a></li>
+							<li><a href="contact.html" class="button ">Contact</a></li>
 						</ul>
 					</nav>
 				</header>
