--- a/contact.html
+++ b/contact.html
@@ -23,10 +23,11 @@
 					<nav id="nav">
 						<ul>
                             <li><a href="index.html">Home</a></li>
-							<li><a href="aboutus.html">About us</a></li>
-                            <li><a href="currentprojects.html">Current research projects</a></li>
+                            <li><a href="research.html">Research</a></li>
+                            <li><a href="news.html">News</a></li>
                             <li><a href="publications.html">Publications</a></li>
-							<li><a href="people.html">The team</a></li>
+							<li><a href="people.html">People</a></li>
+							<li><a href="aboutus.html">About us</a></li>
 							<li><a href="contact.html" class="button ">Contact</a></li>
 						</ul>
 					</nav>
@@ -50,8 +51,8 @@
 
                                 <h3>Adress</h3>
                                 <p>Donders Centre for Cognition<br>
-                                    Thomas van Aquinostraat 4<br>
-                                    6525 GD Nijmegen<br>
+                                    Montessorilaan 3<br>
+                                    6525 HR Nijmegen<br>
                                     The Netherlands<br><br></p>
                                 </div>
                                 <div class="contactcolumn">
@@ -66,12 +67,8 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://twitter.com/lennartverhagen" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="mailto: lennart.verhagen@donders.ru.nl" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
