--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <!-- Header -->
 <header id="header">
     <h1 id="logo"><a href="index.html">Verhagen Lab</a></h1>
-    <nav id="nav">
+    <nav id="nav" style="color: red;">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="research.html">Research</a></li>
