--- a/iTrusst/index.html
+++ b/iTrusst/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Home - Verhagen Lab</title>
+		<title>Home - ITRUSST</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -62,7 +62,7 @@
             }
 
             document.onreadystatechange = function () {
-              if (document.readyState == "interactive") {
+              if (document.readyState == "complete") {
                 addcontent();
                 $.getScript("assets/js/main.js", function(){});
                 $.getScript("assets/js/modalcode.js", function(){});
