--- a/iTrusst/aboutus.html
+++ b/iTrusst/aboutus.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>About us - Verhagen Lab</title>
+		<title>About us - ITRUSST</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
