--- a/iTrusst/publications.html
+++ b/iTrusst/publications.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Publications - Verhagen Lab</title>
+		<title>Publications - ITRUSTT</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
