--- a/iTrusst/research.html
+++ b/iTrusst/research.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Research - Verhagen Lab</title>
+		<title>Research - ITRUSTT</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
