--- a/iTrusst/content_index.html
+++ b/iTrusst/content_index.html
@@ -23,7 +23,7 @@
          ------------->
         <li>
             <!-- The overview button -->
-            <a class="profile" href="planning.html">
+            <a class="profile" href="wg_planning.html">
                 <img alt="Profile shot" src="images/planning.jpg" />
                 <h2 class="profile__name gallerybutton">Planning</h2>
             </a>
@@ -34,7 +34,7 @@
          ------------->
         <li>
             <!-- The overview button -->
-            <a class="profile" href="reporting.html">
+            <a class="profile" href="wg_reporting.html">
                 <img alt="Profile shot" src="images/reporting.jpg" />
                 <h2 class="profile__name gallerybutton">Reporting</h2>
             </a>
@@ -45,7 +45,7 @@
          ------------->
         <li>
             <!-- The overview button -->
-            <a class="profile" href="safety.html">
+            <a class="profile" href="wg_safety.html">
                 <img alt="Profile shot" src="images/safety.jpg" />
                 <h2 class="profile__name gallerybutton">Safety</h2>
             </a>
@@ -56,7 +56,7 @@
          ------------->
         <li>
             <!-- The overview button -->
-            <a class="profile" href="equipment.html">
+            <a class="profile" href="wg_equipment.html">
                 <img alt="Profile shot" src="images/equipment.jpg" />
                 <h2 class="profile__name gallerybutton">Equipment</h2>
             </a>
@@ -67,7 +67,7 @@
          ------------->
         <li>
             <!-- The overview button -->
-            <a class="profile" href="practice.html">
+            <a class="profile" href="wg_practice.html">
                 <img alt="Profile shot" src="images/practice.jpg" />
                 <h2 class="gallerybutton">Practice</h2>
             </a>
@@ -78,7 +78,7 @@
          ------------->
         <li>
             <!-- The overview button -->
-            <a class="profile" href="open.html">
+            <a class="profile" href="wg_open.html">
                 <img alt="Profile shot" src="images/open.jpg" />
                 <h2 class="profile__name gallerybutton">Open</h2>
             </a>
@@ -89,7 +89,7 @@
          ------------->
         <li>
             <!-- The overview button -->
-            <a class="profile" href="clinical.html">
+            <a class="profile" href="wg_clinical.html">
                 <img alt="Profile shot" src="images/clinical.jpg" />
                 <h2 class="profile__name gallerybutton">Clinical</h2>
             </a>
