--- a/iTrusst/header.html
+++ b/iTrusst/header.html
@@ -6,15 +6,15 @@
             <li><a href="index.html">Home</a></li>
             
             <li>
-                <a href="#">Working groups</a>
+                <a href="#">Workgroups</a>
                 <ul>
-                    <li><a href="planning.html">Planning</a></li>
-                    <li><a href="reporting.html">Reporting</a></li>
-                    <li><a href="safety.html">Safety</a></li>
-                    <li><a href="equipment.html">Equipment</a></li>
-                    <li><a href="practice.html">Practice</a></li>
-                    <li><a href="open.html">Open</a></li>
-                    <li><a href="clinical.html">Clinical</a></li>
+                    <li><a href="wg_planning.html">Planning</a></li>
+                    <li><a href="wg_reporting.html">Reporting</a></li>
+                    <li><a href="wg_safety.html">Safety</a></li>
+                    <li><a href="wg_equipment.html">Equipment</a></li>
+                    <li><a href="wg_practice.html">Practice</a></li>
+                    <li><a href="wg_open.html">Open</a></li>
+                    <li><a href="wg_clinical.html">Clinical</a></li>
                     
                 </ul>
             </li>
