--- a/iTrusst/header.html
+++ b/iTrusst/header.html
@@ -18,7 +18,7 @@
                     
                 </ul>
             </li>
-            <li><a href="research.html">Info</a></li>
+            <li><a href="info.html">Info</a></li>
             <li><a href="news.html">News</a></li>
             <li><a href="people.html">People</a></li>
             <li><a href="aboutus.html">About us</a></li>
