--- a/neuromodlab/content_people.html
+++ b/neuromodlab/content_people.html
@@ -73,7 +73,7 @@
             <!-- The overview button -->
             <a class="profile openmodal">
               <img alt="Profile shot" src="people/Ben.jpg" />
-              <h2 class="profile__name">Ben Bramson</h2>
+              <h2 class="profile__name">Benjamin Kop</h2>
               <p class = "titleorange">PhD student</p>
             </a>
         </li>   
