--- a/neuromodlab/research.html
+++ b/neuromodlab/research.html
@@ -25,7 +25,7 @@
             <div id="main" class="wrapper style1">
                 <div class="container">
                     <header class="major">
-                        <h2>Research</h2>
+                        <h2>Project topics</h2>
                     </header>
 
                     <!-- Content -->
