--- a/iTrusst/people.html
+++ b/iTrusst/people.html
@@ -58,7 +58,7 @@
                 jQuery.get('footer.html', function(footercode) {
                     document.getElementById("myFooter").innerHTML = footercode;
                 });
-                jQuery.get('content_people3.html', function(contentcode) {
+                jQuery.get('content_people.html', function(contentcode) {
                     document.getElementById("myContent").innerHTML = contentcode;
                 });
             }
