--- a/neuromodlab/header.html
+++ b/neuromodlab/header.html
@@ -1,12 +1,25 @@
 <!-- Header -->
 <header id="header">
-    <h1 id="logo"><a href="index.html">Verhagen Lab</a></h1>
-    <nav id="nav" style="color: red;">
+    <h1 id="logo"><a href="index.html"><img src="images/itrusst.png" style="height:50px;"></a></h1>
+    <nav id="nav">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="research.html">Research</a></li>
-            <li><a href="news.html">News</a></li>
-            <li><a href="publications.html">Publications</a></li>
+            
+            <li>
+                <a href="#">Workgroups</a>
+                <ul>
+                    <li><a href="wg_planning.html">Planning</a></li>
+                    <li><a href="wg_reporting.html">Reporting</a></li>
+                    <li><a href="wg_safety.html">Safety</a></li>
+                    <li><a href="wg_equipment.html">Equipment</a></li>
+                    <li><a href="wg_practice.html">Practice</a></li>
+                    <li><a href="wg_open.html">Open</a></li>
+                    <li><a href="wg_clinical.html">Clinical</a></li>
+                    
+                </ul>
+            </li>
+            <li><a href="info.html">Info</a></li>
+<!--            <li><a href="news.html">News</a></li>-->
             <li><a href="people.html">People</a></li>
             <li><a href="aboutus.html">About us</a></li>
             <li><a href="contact.html" class="button ">Contact</a></li>
