--- a/iTrusst/content_wg_clinical.html
+++ b/iTrusst/content_wg_clinical.html
@@ -1,4 +1,3 @@
-<h2>Workgroup clinical title</h2>
-<p>
-   Text 
-</p>
+<i>
+    Purpose: To establish a clinical roadmap for transcranial ultrasonic stimulation, including guidelines for clinical trials but also a preclinical directions.
+</i>
