--- a/iTrusst/content_wg_planning.html
+++ b/iTrusst/content_wg_planning.html
@@ -1,4 +1,18 @@
-<h2>Workgroup</h2>
-<p>
-   Text 
-</p>
+<i>
+   Purpose: To establish recommendations and guidelines for guidance and planning of focused ultrasound for the purpose of neuromodulation, including acoustic and thermal simulations, calculating exposure and dose parameters, and skull-imaging. 
+</i> <br><br>
+
+<h3>short-term goals</h3>
+
+<ul>
+    <li>To complete phase 1 of modelling intercomparison</li>
+    
+    <li>To make recommendations for a thermal index relevant for TUS (in collaboration with the Safety focus group)</li>
+</ul>
+
+<h3>1 year goals (06/2022)</h3>
+<ul>
+    <li>To move on to the next phases on modelling intercomparison</li>
+    
+    <li>To reach consensus/guidleines for the thermal index</li>
+</ul>
