--- a/iTrusst/content_wg_practice.html
+++ b/iTrusst/content_wg_practice.html
@@ -1,4 +1,22 @@
-<h2>Workgroup</h2>
-<p>
-   Text 
-</p>
+<i>
+    Purpose: To establish recommendations and guidelines for standardized practice, including a guide for beginners, best practices, lab setup, experimental design, and consideration of confounds.
+</i>
+<br><br>
+
+<h3>short-term goals</h3>
+
+<ul>
+    <li>To have a first draft of a beginners recommendations/guide for TUS</li>
+</ul>
+
+<h3>1 year goals (06/2022)</h3>
+<ul>
+    <li>Have a published guide for beginners</li>
+</ul>
+
+<h3>table of contents</h3>
+<ul>
+    <li>
+        <a href="content_documentation">example documentation</a>
+            </li>
+</ul>
