--- a/iTrusst/content_wg_clinical.html
+++ b/iTrusst/content_wg_clinical.html
@@ -1,3 +1,6 @@
-<i>
+<div  class="block blockgrey">
+    <i>
     Purpose: To establish a clinical roadmap for transcranial ultrasonic stimulation, including guidelines for clinical trials but also a preclinical directions.
-</i>
+    </i>
+ </div>   
+    
