--- a/iTrusst/header.html
+++ b/iTrusst/header.html
@@ -10,16 +10,29 @@
                 <ul>
                     <li><a href="wg_planning.html">Planning</a></li>
                     <li><a href="wg_reporting.html">Reporting</a></li>
-                    <li><a href="wg_safety.html">Safety</a></li>
-                    <li><a href="wg_equipment.html">Equipment</a></li>
-                    <li><a href="wg_practice.html">Practice</a></li>
+                    <li><a href="wg_safety.html">Safety</a>
+                        <ul>
+                            <li><a href="wg_safety_bioeffects.html">Bioeffects</a></li>
+                            <li><a href="wg_safety_contraindications.html">Contraindications</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="wg_equipment.html">Equipment</a>
+                        <ul>
+                            <li><a href="wg_equipment_recommendations.html">Recommendations</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="wg_practice.html">Practice</a>
+                        <ul>
+                            <li><a href="wg_practice_example_documentation.html">Example documentation</a></li>
+                        </ul>
+                    </li>
                     <li><a href="wg_open.html">Open</a></li>
                     <li><a href="wg_clinical.html">Clinical</a></li>
                     
                 </ul>
             </li>
             <li><a href="info.html">Info</a></li>
-            <li><a href="news.html">News</a></li>
+<!--            <li><a href="news.html">News</a></li>-->
             <li><a href="people.html">People</a></li>
             <li><a href="aboutus.html">About us</a></li>
             <li><a href="contact.html" class="button ">Contact</a></li>
