--- a/iTrusst/content_contact.html
+++ b/iTrusst/content_contact.html
@@ -1,10 +1,10 @@
 <div class="contactcolumns">
     <div class="contactcolumn">
         
-        <h3>Contact person </h3>
+        <h3>Contact</h3>
         <p>
-            Lennart Verhagen <br>
-            Email:	lennart.verhagen[at]donders.ru.nl<br><br>
+            <a href="itrusst.info@gmail.com">itrusst.info@gmail.com</a>
+            <br><br>
         </p>
 
         <h3>Adress</h3>
