--- a/iTrusst/content_meeting_april21.html
+++ b/iTrusst/content_meeting_april21.html
@@ -1,8 +1,8 @@
 <h3>Agenda</h3>
 <ul>
-    <li>-Introduction of FUN2021</li>
-    <li>-Updates from individual working groups</li>
-    <li>-Plenary discussion on standardized reporting</li>
+    <li>-   Introduction of FUN2021</li>
+    <li>-   Updates from individual working groups</li>
+    <li>-   Plenary discussion on standardized reporting</li>
 </ul> 
 
 <div  class="block blockgrey">
@@ -15,44 +15,44 @@
 
 <h3>Attendance report</h3>
     <ul>
-        <li>-Ainslie Johnstone</li>
-        <li>-Alexander Bystritsky</li>
-        <li>-Andrew Thomas</li>
-        <li>-Anton Fomenko</li>
-        <li>-Apoutou N’Djin</li>
-        <li>-Axel Thielscher</li>
-        <li>-Charles Caskey</li>
-        <li>-Colette Reniers</li>
-        <li>-Cristina Pasquinelli</li>
-        <li>-David Attali</li>
-        <li>-Ellen Bubrick</li>
-        <li>-Elly Martin</li>
-        <li>-Elsa Fouragnan</li>
-        <li>-Fidel Vila</li>
-        <li>-Ghazal Darmani</li>
-        <li>-Gianmarco Pinton</li>
-        <li>-Hartwig Siebne</li>
-        <li>-Jeroma Sallet</li>
-        <li>-Jesse van der Spek</li>
-        <li>-John Snell</li>
-        <li>-Kim Butts Pauly</li>
-        <li>-Lennart Verhagen</li>
-        <li>-Mark Schafer</li>
-        <li>-Martin Monti</li>
-        <li>-Meike Jodies</li>
-        <li>-Nethan McDannold</li>
-        <li>-Robert Chen</li>
-        <li>-Robert Cheng</li>
-        <li>-Samuel Richardo</li>
-        <li>-Sjoerd Meijer</li>
-        <li>-Suzanne Leblang</li>
-        <li>-Sven Bestmann</li>
-        <li>-Takahro Osada</li>
-        <li>-Til Ole Bergmann</li>
-        <li>-Tulika Nandi</li>
-        <li>-Wynn Legon</li>
-        <li>-Yasuo Terao</li>
-        <li>-Yoshikazu Ugawa</li>
+        <li>-   Ainslie Johnstone</li>
+        <li>-   Alexander Bystritsky</li>
+        <li>-   Andrew Thomas</li>
+        <li>-   Anton Fomenko</li>
+        <li>-   Apoutou N’Djin</li>
+        <li>-   Axel Thielscher</li>
+        <li>-   Charles Caskey</li>
+        <li>-   Colette Reniers</li>
+        <li>-   Cristina Pasquinelli</li>
+        <li>-   David Attali</li>
+        <li>-   Ellen Bubrick</li>
+        <li>-   Elly Martin</li>
+        <li>-   Elsa Fouragnan</li>
+        <li>-   Fidel Vila</li>
+        <li>-   Ghazal Darmani</li>
+        <li>-   Gianmarco Pinton</li>
+        <li>-   Hartwig Siebne</li>
+        <li>-   Jeroma Sallet</li>
+        <li>-   Jesse van der Spek</li>
+        <li>-   John Snell</li>
+        <li>-   Kim Butts Pauly</li>
+        <li>-   Lennart Verhagen</li>
+        <li>-   Mark Schafer</li>
+        <li>-   Martin Monti</li>
+        <li>-   Meike Jodies</li>
+        <li>-   Nethan McDannold</li>
+        <li>-   Robert Chen</li>
+        <li>-   Robert Cheng</li>
+        <li>-   Samuel Pichardo</li>
+        <li>-   Sjoerd Meijer</li>
+        <li>-   Suzanne Leblang</li>
+        <li>-   Sven Bestmann</li>
+        <li>-   Takahiro Osada</li>
+        <li>-   Til Ole Bergmann</li>
+        <li>-   Tulika Nandi</li>
+        <li>-   Wynn Legon</li>
+        <li>-   Yasuo Terao</li>
+        <li>-   Yoshikazu Ugawa</li>
     </ul>
 
 
@@ -70,7 +70,7 @@
 </p>
 
     <h3>Update focus groups</h3>
-    <h4><i>-Planning group-</i></h4>
+    <h4><i>Planning group</i></h4>
 <p>
     <b>Samuel Pichardo:</b> Brad Treeby did an amazing job in facilitating all the communication. Next meeting will be soon, we are advancing really well.<br><br>
     <b>Kim Butts Pauly:</b> We have been starting to talk about state-of-the-art MRI for phase correction and modeling and standardized derating. We will continue our discussion.<br><br>
@@ -78,23 +78,23 @@
     <b>Samuel Pichardo:</b> We will have to check during the next meeting, but seeing the progress, we probably are able to do that. However, it first needs to be discussed.<br><br>
 </p>   
     
-    <h4><i>-Safety group-</i></h4>
+    <h4><i>Safety group</i></h4>
 <p>
     <b>Elsa Fouragnan:</b> We mainly focused on adverse events and side effects and the definition of this. Often not reported in literature. We are also thinking about redoing simulations of specific articles, how to report, and comparing everything to other studies.<br><br>
 </p>
     
-    <h4><i>-Equipment group-</i></h4>
+    <h4><i>Equipment group</i></h4>
 <p>
     <b>Elly Martin:</b> We have not met up since the previous meeting due to the holidays etc., so I’m afraid we don’t have an update. We will meet up soon. <br><br>
 </p>
 
-    <h4><i>-Practice group-</i></h4>
+    <h4><i>Practice group</i></h4>
 <p>
     <b>Til Ole Bergmann:</b> We are making progress and started filling in the practical guide with content. We’re making an accessible guide for beginners. We won’t make anything public before other groups are finished. When it’s properly finished, we will show it to ITRUSST and only then decide how to publish it. But it’s not only for our members, also for others/beginners.<br><br>
     <b>Lennart Verhagen:</b> You can always post something, as long as it’s clear if there is no consensus, consensus within the expert focus group, or consensus of the whole group (i.e., ITRUSST).<br><br>
 </p>
 
-    <h4><i>-Open group-</i></h4>
+    <h4><i>Open group</i></h4>
 <p>
     <b>Tulika Nandi:</b> Lennart’s lab arranged a license and we began to decide what resources to use to share documents, data and code. After that, other groups know how to share their resources. We have a twitter account now, please follow us (@itrusst)! If anyone has designing skills, we still need a new logo, please contact us!<br><br>
     <b>Lennart Verhagen:</b> <a href="https://itrusst.github.io/documentation/practice/DondersSOP.html">https://itrusst.github.io/documentation/practice/DondersSOP.html</a> This link shows an example of how to document and publicly share our things. This is an example, but is not an ITRUSST wide example, so it would be great to have input from other voices as well.<br>
@@ -103,7 +103,7 @@
     <b>Charles Caskey:</b> Thank you for explaining, if more is up there, it would look less like a consensus indeed.<br><br>
 </p>
 
-    <h4><i>-Clinical group-</i></h4>
+    <h4><i>Clinical group</i></h4>
 <p> 
     <b>Fidel Vila:</b> We’ve been meeting every other week. However, I was not able to meet last week. Maybe Robert, Ellen or Chris can provide us with the latest update?<br><br>
     <b>Martin Monti:</b> Our discussion is trying to focus on different items. We are discussing existing registered clinical trials and their adverse events. What has been reported for specifically human trials. We also discussed the relationship between data on safety assessed at different levels/models (small/large animals/humans). We haven’t explored the best way to set up a clinical trial.<br><br>
