--- a/iTrusst/content_wg_clinical.html
+++ b/iTrusst/content_wg_clinical.html
@@ -4,3 +4,8 @@
     </i>
  </div>   
     
+<div class="block blockorange">
+    <h3 style="color:black"> Chairmenship clinical working group</h3>
+    <b style="color:black"> Christopher Butler (chair)</b><p style="color:white"> University of Oxford, Imperial College London, United Kingdom</p>
+    
+</div>
