--- a/iTrusst/content_wg_equipment.html
+++ b/iTrusst/content_wg_equipment.html
@@ -29,3 +29,9 @@
         <a href="content_recommendations">(Draft) Recommendations for acoustic output calibration, testing, and routine checks of equipment for transcranial focused ultrasound for neuromodulation</a>
             </li>
 </ul>
+
+<div class="block blockorange">
+    <h3 style="color:black"> Chairmenship equipment working group</h3>
+    <b style="color:black"> Elly Martin (chair)</b><p style="color:white"> University College London, United Kingdom</p>
+    
+</div>
