--- a/iTrusst/content_wg_open.html
+++ b/iTrusst/content_wg_open.html
@@ -4,3 +4,11 @@
     </i>
 </div>
 
+
+<div class="block blockorange">
+    <h3 style="color:black"> Chairmenship open working group</h3>
+    <b style="color:black"> Benjamin Kop (co-chair)</b><p style="color:white"> Donders Institute, Radboud University Nijmegen, the Netherlands</p><br>
+    <b style="color:black"> Tulika Nandi (co-chair)</b><p style="color:white"> Johannes Gutenberg University Medical Center Mainz, Germany</p>   
+</div>
+
+    
