--- a/iTrusst/content_wg_planning.html
+++ b/iTrusst/content_wg_planning.html
@@ -19,4 +19,10 @@
     
     <li>-To reach consensus/guidleines for the thermal index</li>
 </ul>
+
+<div class="block blockorange">
+    <h3 style="color:black"> Chairmenship planning working group</h3>
+    <b style="color:black"> Bradley Treeby (co-chair)</b><p style="color:white"> University College London, United Kingdom</p><br>
+    <b style="color:black"> Kim Butts Pauly (co-chair)</b><p style="color:white"> Stanford University, USA</p>
+    
 </div>
