--- a/iTrusst/content_wg_practice.html
+++ b/iTrusst/content_wg_practice.html
@@ -20,3 +20,9 @@
         <a href="content_documentation">example documentation</a>
             </li>
 </ul>
+
+<div class="block blockorange">
+    <h3 style="color:black"> Chairmenship practice working group</h3>
+    <b style="color:black"> Til Ole (chair)</b><p style="color:white"> Johannes Gutenberg University Medical Center Mainz, Germany</p>
+    
+</div>
