--- a/iTrusst/content_wg_practice_example_documentation.html
+++ b/iTrusst/content_wg_practice_example_documentation.html
@@ -1,4 +1,4 @@
-<h2>example documentation</h2>
+<h2>Example documentation</h2>
 <i>
     The following examples are provided ‘as is’ by the copyright holders as a supplementary resource. These examples do not necessarily reflect the consensus opinion of ITRUSST.
 </i>
@@ -7,7 +7,7 @@
     <a href="https://zenodo.org/record/4751422#.YlftMy8Rplw"> Example standard operating procedure - Donders Institute: DOI 10.5281/zenodo.4751422</a>
 </div>
 
-<h3>table of contents</h3>
+<h3>Table of contents</h3>
 
 <ol>
     <li>Purpose</li>
@@ -93,22 +93,22 @@
     The certified experimenter will decide upon inclusion or exclusion of the prospective participant. Unless otherwise stated, it is the norm that participants will be excluded from the session if they meet at least one of the following criteria: <br><br>
 </p>
 <ul>
-    <li>Under 18 years of age</li>
-    <li>Current or planned pregnancy</li>
-    <li>A history or brain surgery or serious head trauma</li>
-    <li>A history of or any close relatives (parents, siblings, children) with epilepsy, convulsion, or seizure</li>
-    <li>Predisposition for fainting spells (syncope)</li>
-    <li>A cardiac pacemaker or intra-cardiac lines</li>
-    <li>An implanted neurostimulator</li>
-    <li>Implanted medication infusion device</li>
-    <li>Implanted metal devices or large ferromagnetic fragments in the head or upper body (excluding dental wire), or jewellery/piercing that cannot be removed</li>
-    <li>Use of a medical plaster that cannot or may not be taken off (e.g., nicotine plaster)</li>
-    <li>Cochlear implants</li>
-    <li>Metal in the brain, skull, or elsewhere in your body (fragments, clips, etc.)</li>
-    <li>Diagnosed neurological or psychiatric disorders</li>
-    <li>Use of psychoactive (prescription) medication (excluding anti-conception)</li>
-    <li>Skin disease at intended stimulation sites</li>
-    <li>The consumption of more than four alcoholic units within 24 hours before participation or any recreational drugs within 48 hours before participation</li>    
+    <li>*Under 18 years of age</li>
+    <li>*Current or planned pregnancy</li>
+    <li>*A history or brain surgery or serious head trauma</li>
+    <li>*A history of or any close relatives (parents, siblings, children) with epilepsy, convulsion, or seizure</li>
+    <li>*Predisposition for fainting spells (syncope)</li>
+    <li>*A cardiac pacemaker or intra-cardiac lines</li>
+    <li>*An implanted neurostimulator</li>
+    <li>*Implanted medication infusion device</li>
+    <li>*Implanted metal devices or large ferromagnetic fragments in the head or upper body (excluding dental wire), or jewellery/piercing that cannot be removed</li>
+    <li>*Use of a medical plaster that cannot or may not be taken off (e.g., nicotine plaster)</li>
+    <li>*Cochlear implants</li>
+    <li>*Metal in the brain, skull, or elsewhere in your body (fragments, clips, etc.)</li>
+    <li>*Diagnosed neurological or psychiatric disorders</li>
+    <li>*Use of psychoactive (prescription) medication (excluding anti-conception)</li>
+    <li>*Skin disease at intended stimulation sites</li>
+    <li>*The consumption of more than four alcoholic units within 24 hours before participation or any recreational drugs within 48 hours before participation</li>    
 </ul>
 
 <h4><b>4.3. Monitoring adverse events</b></h4>
