--- a/iTrusst/content_wg_reporting.html
+++ b/iTrusst/content_wg_reporting.html
@@ -21,3 +21,10 @@
     
     <li>-To reach consensus/guidleines for the thermal index</li>
 </ul>
+
+
+<div class="block blockorange">
+    <h3 style="color:black"> Chairmenship reporting working group</h3>
+    <b style="color:black"> Lennart Verhagen (chair)</b><p style="color:white"> Donders Insitute, Radboud University Nijmegen, the Netherlands</p>
+    
+</div>
