--- a/iTrusst/content_wg_safety.html
+++ b/iTrusst/content_wg_safety.html
@@ -25,9 +25,16 @@
 <h3>table of contents</h3>
 <ul>
     <li>
-        <a href="content_bioeffects">bioeffects</a>
+        <a href="wg_safety_bioeffects.html">bioeffects</a>
             </li>
     <li>
-        <a href="content_contraindications">contraindications</a>
+        <a href="wg_safety_contraindications.html">contraindications</a>
             </li>
 </ul>
+
+<div class="block blockorange">
+    <h3 style="color:black"> Chairmenship safety working group</h3>
+    <b style="color:black"> Jean-Francois Aubry (co-chair)</b><p style="color:white"> National Centre for Scientific Research, France</p><br>
+    <b style="color:black"> Seung-Schik Yoo (co-chair)</b><p style="color:white"> Harvard University, USA</p>
+    
+</div>
