--- a/iTrusst/header.html
+++ b/iTrusst/header.html
@@ -29,6 +29,9 @@
                     <li><a href="wg_open.html">Open</a></li>
                     <li><a href="wg_clinical.html">Clinical</a></li>
                     
+                    <li><a href="wg_open.html">Open</a></li>
+                    <li><a href="wg_meetingmins.html">Meeting minutes</a></li>
+                    
                 </ul>
             </li>
             <li><a href="info.html">Info</a></li>
