--- a/iTrusst/meeting_may21.html
+++ b/iTrusst/meeting_may21.html
@@ -25,7 +25,7 @@
             <div id="main" class="wrapper style1">
                 <div class="container">
                     <header class="major">
-                        <h2>Workgroup: Safety - Bioeffects</h2>
+                        <h2>Meeting minutes May 20, 2021</h2>
                     </header>
 
                     <!-- Content -->
@@ -56,7 +56,7 @@
                 jQuery.get('footer.html', function(footercode) {
                     document.getElementById("myFooter").innerHTML = footercode;
                 });
-                jQuery.get('content_wg_safety_bioeffects.html', function(contentcode) {
+                jQuery.get('content_meeting_may21.html', function(contentcode) {
                     document.getElementById("myContent").innerHTML = contentcode;
                 });
             }
