--- a/iTrusst/footer.html
+++ b/iTrusst/footer.html
@@ -1,8 +1,8 @@
 <!-- Footer -->
 <footer id="footer">
     <ul class="icons">
-        <li><a href="https://twitter.com/lennartverhagen" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-        <li><a href="mailto: lennart.verhagen@donders.ru.nl" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+        <li><a href="https://twitter.com/itrusst" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+        <li><a href="mailto: itrusst.info@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
     </ul>
     <ul class="copyright">
         <li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
