--- a/iTrusst/wg_equipment_recommendations.html
+++ b/iTrusst/wg_equipment_recommendations.html
@@ -25,7 +25,7 @@
             <div id="main" class="wrapper style1">
                 <div class="container">
                     <header class="major">
-                        <h2>Workgroup: Equipment - recommendations</h2>
+                        <h2>Workgroup: Equipment - Recommendations</h2>
                     </header>
 
                     <!-- Content -->
