--- a/iTrusst/content_wg_equipment.html
+++ b/iTrusst/content_wg_equipment.html
@@ -31,7 +31,7 @@
 </ul>
 
 <div class="block blockorange">
-    <h3 style="color:black"> Chairmenship equipment working group</h3>
+    <h3 style="color:white"> Chairmenship equipment working group</h3>
     <b style="color:black"> Elly Martin (chair)</b><p style="color:white"> University College London, United Kingdom</p>
     
 </div>
