--- a/iTrusst/content_wg_practice.html
+++ b/iTrusst/content_wg_practice.html
@@ -22,7 +22,7 @@
 </ul>
 
 <div class="block blockorange">
-    <h3 style="color:black"> Chairmenship practice working group</h3>
-    <b style="color:black"> Til Ole (chair)</b><p style="color:white"> Johannes Gutenberg University Medical Center Mainz, Germany</p>
+    <h3 style="color:white"> Chairmenship practice working group</h3>
+    <b style="color:black"> Til Ole Bergmann (chair)</b><p style="color:white"> Johannes Gutenberg University Medical Center Mainz, Germany</p>
     
 </div>
