--- a/iTrusst/content_wg_reporting.html
+++ b/iTrusst/content_wg_reporting.html
@@ -24,7 +24,7 @@
 
 
 <div class="block blockorange">
-    <h3 style="color:black"> Chairmenship reporting working group</h3>
+    <h3 style="color:white"> Chairmenship reporting working group</h3>
     <b style="color:black"> Lennart Verhagen (chair)</b><p style="color:white"> Donders Insitute, Radboud University Nijmegen, the Netherlands</p>
     
 </div>
