--- a/iTrusst/content_wg_safety.html
+++ b/iTrusst/content_wg_safety.html
@@ -33,7 +33,7 @@
 </ul>
 
 <div class="block blockorange">
-    <h3 style="color:black"> Chairmenship safety working group</h3>
+    <h3 style="color:white"> Chairmenship safety working group</h3>
     <b style="color:black"> Jean-Francois Aubry (co-chair)</b><p style="color:white"> National Centre for Scientific Research, France</p><br>
     <b style="color:black"> Seung-Schik Yoo (co-chair)</b><p style="color:white"> Harvard University, USA</p>
     
