--- a/iTrusst/content_wg_clinical.html
+++ b/iTrusst/content_wg_clinical.html
@@ -5,7 +5,7 @@
  </div>   
     
 <div class="block blockorange">
-    <h3 style="color:black"> Chairmenship clinical working group</h3>
+    <h3 style="color:white"> Chairmenship clinical working group</h3>
     <b style="color:black"> Christopher Butler (chair)</b><p style="color:white"> University of Oxford, Imperial College London, United Kingdom</p>
     
 </div>
